# WinInternals

./: .editorconfig  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  README.md  WinInternals.slnx  build.bat  deploy.py  pyrightconfig.json
Aarw/: Aarw.vcxproj  main.c
GetDllBaseAddress/: GetDllBaseAddress.vcxproj  main.c
OobEx1/: OobEx1.vcxproj  main.c
OobRead1/: OobRead1.vcxproj  main.c
OobRead2/: OobRead2.vcxproj  main.c
ResolveFuncFromPeb/: ResolveFuncFromPeb.vcxproj  main.c
StackBufferOverflow/: StackBufferOverflow.vcxproj  main.c
Uninit/: Uninit.vcxproj  main.c
cheatsheets/: calling_conventions.md  winDbg.md
common/cmake/: exploit_target.cmake
common/python/: util.py  windbg.py  winenv.py
exploitation/01_stack_overflow/basic_ret_overwrite/: CMakeLists.txt  exploit.py
exploitations/01_stack/bof_aar_aaw/: CMakeLists.txt  exploit.py  main.c
exploitations/01_stack/bof_oob/: CMakeLists.txt  exploit.py  main.c
exploitations/01_stack/bof_ret_overwrite/: CMakeLists.txt  exploit.py  main.c
exploitations/01_stack/bof_rop/: CMakeLists.txt  exploit.py
internals/resolve_func_from_peb/: CMakeLists.txt  main.c
scripts/: aarw.py  aarwX64.py  aarwX86.py  cleanupVcxproj.ps1  environment.py  findGadget.bat  find_gadget.bat  generateBin.py  generateRopBinX86.py  oobEx1.py  oobEx1X86.py  oobRead1.py  oobRead2.py  uninit.py  util.py
